feat: Update R2DBC converters and Jackson configuration to enhance Quantity serialization and deserialization